[gd_scene load_steps=14 format=2]

[ext_resource path="res://Trackers/TrackerCharacter.gd" type="Script" id=1]
[ext_resource path="res://Textures/Characters/character_icon_heister.png" type="Texture" id=2]
[ext_resource path="res://Textures/tracker_marker_stem.png" type="Texture" id=3]
[ext_resource path="res://Textures/tracker_marker_spot.png" type="Texture" id=4]
[ext_resource path="res://Textures/tracker_marker_pointer.png" type="Texture" id=5]
[ext_resource path="res://Textures/tracker_marker.png" type="Texture" id=6]
[ext_resource path="res://Trackers/TrackerPlayerStatus.tscn" type="PackedScene" id=7]

[sub_resource type="Animation" id=1]
resource_name = "removing"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 1.2, 1.25, 1.2 ), Vector3( 1, 0.8, 1 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "remove_tracker"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "spawning"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 1, 0.2, 1 ), Vector3( 1, 1, 1 ) ]
}

[sub_resource type="CapsuleShape" id=3]
radius = 0.5

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
flags_unshaded = true
flags_do_not_receive_shadows = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 4 )

[sub_resource type="QuadMesh" id=5]

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.5, 0.8, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.965924, 1, 1, 1, 0.76393, 1, 1, 1, 0 )

[node name="Tracker" type="Spatial"]
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "spawning"
anims/removing = SubResource( 1 )
anims/spawning = SubResource( 2 )

[node name="Hitbox" type="Area" parent="."]

[node name="CollisionBase" type="CollisionShape" parent="Hitbox"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.75, 0 )
shape = SubResource( 3 )

[node name="Direction" type="Spatial" parent="."]

[node name="TrackerDirection" type="Sprite3D" parent="Direction"]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0, -0.5 )
axis = 1
texture = ExtResource( 5 )

[node name="Height" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="HeadIcon" type="Sprite3D" parent="Height"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.32, 0 )
pixel_size = 0.0075
billboard = 1
double_sided = false
texture = ExtResource( 2 )

[node name="HeadLine" type="Sprite3D" parent="Height"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0 )
opacity = 0.5
billboard = 2
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 8, 100 )

[node name="HeadDot" type="Sprite3D" parent="Height"]
billboard = 1
texture = ExtResource( 4 )

[node name="Status" parent="Height" instance=ExtResource( 7 )]

[node name="TrackerBase" type="Sprite3D" parent="."]
pixel_size = 0.017
axis = 1
texture = ExtResource( 6 )

[node name="Particles" type="CPUParticles" parent="."]
material_override = SubResource( 4 )
cast_shadow = 0
generate_lightmap = false
emitting = false
amount = 1000
lifetime = 100.0
local_coords = false
mesh = SubResource( 5 )
direction = Vector3( 0, 0, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
scale_amount = 0.1
color_ramp = SubResource( 6 )

[node name="TrackerLines" type="Spatial" parent="."]

[connection signal="input_event" from="Hitbox" to="." method="_on_hitbox_input_event"]
